refactor(rename): renamed tab Skill to Porfolio

--- a/skills.html
+++ b/skills.html
@@ -10,12 +10,12 @@
           <nav class="about-nav">
               <a href="index.html">Home</a>
               <a href="about.html">About</a>
-              <a href="skills.html" class="active-about">Skills</a>
+              <a href="skills.html" class="active-about">Portfolio</a>
               <a href="contact.html">Contact</a>
           </nav>
       </header>
       <section class="skills-hero container">
-          <h1 class="section-title">Skills Snapshot</h1>
+          <h1 class="section-title">Tech Stacks</h1>
           <!-- Sticky notes grid -->
           <div class="sticky-grid">
               <article class="sticky">
@@ -256,7 +256,7 @@
           <nav class="footer-nav">
               <a href="index.html">Home</a>
               <a href="about.html">About</a>
-              <a href="skills.html">Skills</a>
+              <a href="skills.html">Portfolio</a>
               <a href="contact.html">Contact</a>
           </nav>
   </body>
