--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
           <nav class="about-nav">
               <a href="index.html">Home</a>
               <a href="about.html" class="active-about">About</a>
-              <a href="skills.html">Skills</a>
+              <a href="skills.html">Portfolio</a>
               <a href="contact.html">Contact</a>
           </nav>
       </header>
@@ -190,7 +190,7 @@
           <nav class="footer-nav">
               <a href="index.html">Home</a>
               <a href="about.html">About</a>
-              <a href="skills.html">Skills</a>
+              <a href="skills.html">Portfolio</a>
               <a href="contact.html">Contact</a>
           </nav>
       </footer>
