--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
         <nav class="footer-nav">
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
-          <a href="skills.html">Skills</a>
+          <a href="skills.html">Portfolio</a>
         </nav>
       </footer>
     </div>
