--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               <nav class="primary-nav">
                   <a href="index.html" class="active-index">Home</a>
                   <a href="about.html">About</a>
-                  <a href="skills.html">Skills</a>
+                  <a href="skills.html">Portfolio</a>
                   <a href="contact.html">Contact</a>
               </nav>
           </header>
@@ -28,7 +28,7 @@
               <small>&copy; Ochieng&apos; Sulwe</small>
               <nav class="footer-nav">
                   <a href="about.html">About</a>
-                  <a href="skills.html">Skills</a>
+                  <a href="skills.html">Portfolio</a>
                   <a href="contact.html">Contact</a>
               </nav>
           </footer>
