refactor(rename): renamed stacks to stack

--- a/skills.html
+++ b/skills.html
@@ -15,7 +15,7 @@
           </nav>
       </header>
       <section class="skills-hero container">
-          <h1 class="section-title">Tech Stacks</h1>
+          <h1 class="section-title">Tech Stack</h1>
           <!-- Sticky notes grid -->
           <div class="sticky-grid">
               <article class="sticky">
