refactor(profile image): compressed and changed the format to webp the profile image to reduce the loading time

--- a/about.html
+++ b/about.html
@@ -71,7 +71,8 @@
                   <li><strong>Location:</strong> Nairobi, Kenya</li>
               </ul>
               <div class="profile-image">
-                  <img src="assets/images/profile/Ochibo.JPG" alt="Sulwe Profile">
+                  <img src="assets/images/profile/Ochibo.webp" alt="Sulwe Profile"
+                  loading="lazy">
               </div>
           </section>
       </section>
